Use getFirst() instead of get(0) in anchorFrom
Matches the house style used everywhere else in the codebase.